--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.15",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
