--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.15",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
+    "mysql2": "^3.15.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
@@ -33,5 +36,18 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "vite": "^7.1.7"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/khairunnisaruni/setara.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/khairunnisaruni/setara/issues"
+  },
+  "homepage": "https://github.com/khairunnisaruni/setara#readme"
 }
